Get rid of internal models
